--- a/MVC_FeedBackWed/Views/Student/FeedbackList.cshtml
+++ b/MVC_FeedBackWed/Views/Student/FeedbackList.cshtml
@@ -94,7 +94,7 @@
     <script>
         $(document).ready(function () {
             $('#feedbackTable').DataTable({
-                paging: true,        // Bật phân trang
+                paging: true,        
                 pageLength: 5,       // Mỗi trang hiển thị 5 dòng
                 lengthChange: false
             });
