--- a/MVC_FeedBackWed/Views/Teacher/FeedbackListByClass.cshtml
+++ b/MVC_FeedBackWed/Views/Teacher/FeedbackListByClass.cshtml
@@ -108,7 +108,7 @@
                     $("#feedbackTable tbody").html(tbodyHtml);
 
                     $("#feedbackTable").DataTable({
-                        paging: true,        // Bật phân trang
+                        paging: true,        
                         pageLength: 5,       // Mỗi trang hiển thị 5 dòng
                         lengthChange: false
                     });
